# cf-ddns-operator

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  install.sh  pyproject.toml
.github/workflows/: publish.yaml
deploy/: README.md  cloudflare-api-token.yaml  cloudflare-dns-record.yaml  crd.yaml  deployment.yaml  rbac.yaml
deploy/app/: deployment.yaml  rbac.yaml
deploy/crds/: crd.yaml
deploy/examples/: cloudflare-api-token.secret.example.yaml  cloudflare-dns-record.example.yaml
src/cf_ddns_operator/: operator.py
