[project]
name = "cf-ddns-operator"
version = "0.1.0"
description = "Kubernetes operator that keeps Cloudflare DNS A/AAAA records in sync with your current public IP"
readme = "README.md"
authors = [
    { name = "Brishen Hawkins", email = "brishen.hawkins@gmail.com" }
]
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "kopf>=1.39.1",
    "kubernetes-asyncio>=33.3.0",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
